working on Project assignment

--- a/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
+++ b/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
@@ -836,7 +836,7 @@
    ],
    "source": [
     "# The inverse of the ppf is cdf Cumulative Distribution function, goes from 0 to 1\n",
-    "# if i take the value of 0, what is the probability of selection a value les than that.\n",
+    "# if i take the value of 0, what is the probability of selecting a value less than that.\n",
     "# what percentile is zero at\n",
     "ss.norm().cdf(0.0)"
    ]
