--- a/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
+++ b/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bbf7ffac",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b1f88b91",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "3.141592653589793"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "48e83280",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3194d683",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "1.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ccefd5a9",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "0.3989422804014327"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,22 +150,22 @@
    "source": [
     "1.0 / np.sqrt(2* np.pi * sigma**2)\n",
     "#called a literal vaule in the code of 1.0, not 1 (which is 1 as an integer), whereas 1.0 is one as a float. \n",
-    "#If it interacts with other floating point numbers it ill automatically be converted to a floating number."
+    "#If it interacts with other floating point numbers it will automatically be converted to a floating number."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3c056ba5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0xdeee9c4730>]"
+       "[<matplotlib.lines.Line2D at 0xd985af640>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,17 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "9a90b7e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0xdeefe8b490>]"
+       "[<matplotlib.lines.Line2D at 0xd986a84f0>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
