Finalizing ReadMe File

--- a/Normal Distribution/Normal_Distribution_Project_Winter 2022-23.ipynb
+++ b/Normal Distribution/Normal_Distribution_Project_Winter 2022-23.ipynb
@@ -250,7 +250,7 @@
    "id": "36640883",
    "metadata": {},
    "source": [
-    "### Mean ($\\mu$) and Median\n",
+    "### 2.1.1 Mean ($\\mu$) and Median\n",
     "\n",
     "The mean is a mathematical average of a set of data (this can be a population mean or the mean of a sample from a population). It can be obtained by simply summing all the values/observations of a dataset/phenomenon and dividing them by the number of values/observations. It may be biased by the facts that in certain groups of values/obeservations there may be outliers which can distort the value of the mean. \n",
     "\n",
@@ -481,7 +481,7 @@
    "id": "8231ad19",
    "metadata": {},
    "source": [
-    "### Standard Deviation ($\\sigma$)\n",
+    "### 2.1.2 Standard Deviation ($\\sigma$)\n",
     "\n",
     "The standard deviations shows how far the individual observations are from the mean value.\n",
     "It is denoted by the Greek letter sigma ($\\sigma$) when it is the standard deviation of a population and the letter \"s\" when it is used to describe the standard deviation of a sample from a population.\n",
@@ -601,7 +601,7 @@
    "id": "387c6da3",
    "metadata": {},
    "source": [
-    "### Probability Density Function (PDF)"
+    "### 2.1.3 Probability Density Function (PDF)"
    ]
   },
   {
