Update to final section - Conclusion

--- a/Normal Distribution/Normal_Distribution_Project_Winter 2022-23.ipynb
+++ b/Normal Distribution/Normal_Distribution_Project_Winter 2022-23.ipynb
@@ -1565,9 +1565,9 @@
    "id": "d2dfe2e1",
    "metadata": {},
    "source": [
-    "The concept of the Normal Distribution has been discussed since the 19th Century and is the result of the scientific work of Carl Friedrich Gauss,  Pierre-Simon Laplace, Karl Pearson and Sir ronal Aylmer Fisher to mention a few important names whose contributions to the field of mathematics, science, physics and statistics was invaluable.\n",
+    "The concept of the Normal Distribution has been discussed since the 19th Century and is the result of the scientific work of Carl Friedrich Gauss,  Pierre-Simon Laplace, Karl Pearson and Sir ronal Aylmer Fisher to mention a few important names whose contributions to the field of mathematics, science, physics and statistics was invaluable.[8]\n",
     "\n",
-    "There is a vast amount of information available on this topic and the importance of the Normal Distribution, its application in all avenues of life described under section 6. This project attempted to describe some of the basic concepts of the Normal Distribution using available packages of the Python programming language in explaining and visualizing these concepts."
+    "There is a vast amount of information available on this topic and the importance of the Normal Distribution, its application in all avenues of life described under section 6. This project attempted to describe some of the basic concepts of the Normal Distribution using available packages of the Python programming language in explaining and visualizing the Normal Distribution and its properties, the Standard Normal Distribution its Empirical Rule and the Central Limit Theorem. All of these concepts are tied together in the process of analyzing datasets/sample observations to allow to develop a good understanding of the data, the probability of observations falling closer or farther away from the mean and by what scale. Once this understanding is developed further predictions, conclusions can be determined in numerous applications."
    ]
   },
   {
